cluster/zigbee2mqtt/zigbee2mqtt-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
  labels:
    app.kubernetes.io/name: zigbee2mqtt
    app: zigbee2mqtt
    name: zigbee2mqtt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zigbee2mqtt
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: zigbee2mqtt
        app: zigbee2mqtt
    spec:
      containers:
      - name: zigbee2mqtt
        image: koenkk/zigbee2mqtt:1.33.1
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: true
          privileged: true
        resources: 
          requests:
            cpu: 100m
            memory: 200Mi
          limits:
            cpu: 2
            memory: 2Gi
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
          - name: websocket
            containerPort: 8888
            protocol: TCP
          - name: ser2net
            containerPort: 6638
            protocol: TCP
        volumeMounts:
          - name: zigbee-pvc
            mountPath: /data
#          - name: zigbee2mqtt-data-long
#            mountPath: /data
          - name: zigbee2mqtt-config
            mountPath: /app/configuration.yaml
            subPath: configuration.yaml
          - name: zigbee2mqtt-udev
            mountPath: /run/udev
          - mountPath: /dev/ttyUSB0
            name: ttyacm
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 0
          failureThreshold: 6
          timeoutSeconds: 2
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 0
          failureThreshold: 6
          timeoutSeconds: 2
          periodSeconds: 10
        startupProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 0
          failureThreshold: 30
          timeoutSeconds: 2
          periodSeconds: 5
      volumes:
        - name: zigbee-pvc
          persistentVolumeClaim:
            claimName: zigbee-pvc
#        - name: zigbee2mqtt-data-long
#          persistentVolumeClaim:
#            claimName: zigbee2mqtt-pvc
        - name: zigbee2mqtt-udev
          hostPath:
            path: /run/udev
        - name: zigbee2mqtt-config
          configMap:
            name: zigbee2mqtt-config
        - name: ttyacm
          hostPath:
            path: /dev/serial/by-id/usb-ITEAD_SONOFF_Zigbee_3.0_USB_Dongle_Plus_V2_20230803192301-if00
            type: CharDevice
      affinity: 
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - {key: "feature.node.kubernetes.io/usb-02_1a86_55d4.present", operator: In, values: ["true"]}
#              - {key: "feature.node.kubernetes.io/usb-ff_0424_ec00.present", operator: In, values: ["true"]}
