cluster/zigbee2mqtt/zigbee-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/address-pool: server
  name: zigbee2mqtt-tcp
  namespace: zigbee2mqtt
  labels:
    app: zigbee2mqtt
    name: zigbee2mqtt
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: zigbee2mqtt
  type: LoadBalancer
  loadBalancerIP: 192.168.42.7
